@@ -20,16 +20,22 @@
 -- blc principal: ff80808174e4c5470174e4c9d1bf0002, diatrabajo_id: 
 -- blc anterior : ff80808174d572200174d5b05424014d, diatrabajo_id: ff80808174d2eb750174d3096a920000
 
-SELECT   orden, m.id, m.descripcion, m.campo, valor, cantidad, acumulado
-FROM     ingenio.blcdetalle1 d, ingenio.material m
-WHERE    d.material_id = m.id AND
-         d.blc_id='ff80808174e4c5470174e4c9d1bf0002'
-ORDER BY orden;
+-- SELECT   orden, m.id, m.descripcion, m.campo, valor, cantidad, acumulado
+-- FROM     ingenio.blcdetalle1 d, ingenio.material m
+-- WHERE    d.material_id = m.id AND
+--          d.blc_id='ff80808174e4c5470174e4c9d1bf0002'
+-- ORDER BY orden;
+--
+-- SELECT   orden, m.id, m.descripcion, m.campo, valor
+-- FROM     ingenio.blcdetalle5 d, ingenio.material m
+-- WHERE    d.material_id = m.id AND
+--          d.blc_id='ff80808174e4c5470174e4c9d1bf0002'
+-- ORDER BY orden;
 
-SELECT   orden, m.id, m.descripcion, m.campo, valor
-FROM     ingenio.blcdetalle5 d, ingenio.material m
-WHERE    d.material_id = m.id AND
-         d.blc_id='ff80808174e4c5470174e4c9d1bf0002'
+SELECT   orden, i.id, i.descripcion, i.campo, acumulado, totalzafra 
+FROM     ingenio.blcdetalle12 d, ingenio.indicador i
+WHERE    d.indicador_id = i.id AND
+         d.blc_id='ff808081751942ed0175194fc7440002'
 ORDER BY orden;
 
 -- UPDATE ingenio.ingenio.blcdetalle1 SET valor = 0, acumulado = 0 WHERE "id" = 'ff80808174d572200174d5a378e6010c';
